CP-104: Moar spacing fixes (home page CTA)

--- a/frontend/src/main/webapp/app/sass/organisms/_site-account-cta.scss
+++ b/frontend/src/main/webapp/app/sass/organisms/_site-account-cta.scss
@@ -14,6 +14,10 @@
     vertical-align: middle;
     margin-right: -0.25em;
   }
+
+  @media (min-width: $screen-md) {
+    height: 112px;
+  }
 }
 
 .site-account-cta__action{
